--- a/config.yaml
+++ b/config.yaml
@@ -1,39 +1,40 @@
 settings:
-  title: 'Status Page'
-  url: 'https://status-page.eidam.dev' # used for Slack messages
+  title: ‘Headstarter Status’
+  url: ‘https://status.headstarter.workers.dev/’ # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
-
-  allmonitorsOperational: 'All Systems Operational'
-  notAllmonitorsOperational: 'Not All Systems Operational'
-  monitorLabelOperational: 'Operational'
-  monitorLabelNotOperational: 'Not Operational'
-  monitorLabelNoData: 'No data'
-  dayInHistogramNoData: 'No data'
-  dayInHistogramOperational: 'All good'
+  allmonitorsOperational: ‘All Systems Operational’
+  notAllmonitorsOperational: ‘Not All Systems Operational’
+  monitorLabelOperational: ‘Operational’
+  monitorLabelNotOperational: ‘Not Operational’
+  monitorLabelNoData: ‘No data’
+  dayInHistogramNoData: ‘No data’
+  dayInHistogramOperational: ‘All good’
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
-
+  
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
+  - id: landing-page # unique identifier
+    name: theheadstarter.com
+    description: ‘Landing Page’ # default=empty
+    url: ‘https://theheadstarter.com’ # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
     followRedirect: false # should fetch follow redirects, default=false
     linkable: false # allows the title to be a link, default=true
-
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
-    description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
+    
+  - id: app-prod
+    name: app.theheadstarter.com
+    description: ‘Headstarter App (Production)’
+    url: ‘https://app.theheadstarter.com/auth/login/’
     method: GET
     expectStatus: 200
     linkable: true # allows the title to be a link, default=true
-
-  - id: blog-cloudflare-com
-    name: The Cloudflare Blog
-    url: 'https://blog.cloudflare.com/'
+    
+  - id: app-dev
+    name: dev.app.theheadstarter.com
+    description: ‘Headstarter App (Development)’
+    url: ‘https://dev.app.theheadstarter.com/auth/login/’
     method: GET
     expectStatus: 200
+    linkable: true # allows the title to be a link, default=true
