--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,6 +14,8 @@ entry-point = "./"
 
 # uncomment and adjust following if you are not using GitHub Actions
 #[env.production]
-#kv-namespaces = [{binding="KV_STATUS_PAGE", id="xxxx", preview_id=""}]
+kv_namespaces = [ 
+	 { binding = "KV_STATUS_PAGE", id = "3e5fb2147bde4398a74a2ca575569728" }
+]
 #zone_id="xxx"
 #route="xxx"
